lanecwe-Prod/src/objects/Integrationparameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientPwd__c</fullName>
        <label>ClientPwd</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <label>EnterpriseId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Env__c</fullName>
        <label>Env</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethodType__c</fullName>
        <label>MethodType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderId__c</fullName>
        <label>ProviderId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <label>WebID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>action__c</fullName>
        <label>action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webPwd__c</fullName>
        <label>webPwd</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Integrationparameters</label>
</CustomObject>